# RISC-V-Simulator-2024

./: .gitignore  CMakeLists.txt  CmakeLists.txt  test.sh
docs/: outline.drawio
src/: CmakeLists.txt  Makefile  cmake_install.cmake  main.cpp  simulator.cpp
src/include/: simulator.h
src/include/units/: Arithmetic_logic_unit.h  Base_unit.h  Branch_predict.h  Bus.h  Instruction.h  Load_store_buffer.h  Memory.h  Register_file.h  Reorder_buffer.h  Reservation_station.h
src/include/utility/: circle_queue.h  circular_queue.h  config.h  container.h  util.h
src/units/: Arithmetic_logic_unit.cpp  Branch_predict.cpp  Bus.cpp  Instruction.cpp  Load_store_buffer.cpp  Memory.cpp  Register_file.cpp  Reorder_buffer.cpp  Reservation_station.cpp
src/utility/: util.cpp
tmpdir/: CMakeCache.txt  Makefile  cmake_install.cmake
tmpdir/src/: Makefile
